--- a/lab-9/eRegistrar/src/main/resources/templates/fragments/header.html
+++ b/lab-9/eRegistrar/src/main/resources/templates/fragments/header.html
@@ -1,30 +1,5 @@
 <header>
     <div class="container">
-<!--        <nav class="navbar navbar-light navbar-toggleable-sm">-->
-<!--            <a href="#" class="navbar-brand mb-0">eRegistrar</a>-->
-
-<!--            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"-->
-<!--                    data-target="#headerNav" aria-controls="headerNav" aria-expanded="false"-->
-<!--                    aria-label="Toggle navigation">-->
-<!--                <span class="navbar-toggler-icon"></span>-->
-<!--            </button>-->
-
-<!--            <div id="headerNav" class="collapse navbar-collapse justify-content-end">-->
-<!--                <ul class="navbar-nav">-->
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#sec-about">About</a>-->
-<!--                    </li>-->
-
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#sec-pricing">Pricing</a>-->
-<!--                    </li>-->
-
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#sec-contact">Contact</a>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </nav>-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,8 +15,8 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+<!--                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+<!--                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
                 </form>
             </div>
         </nav>
