--- a/lab-9/eRegistrar/src/main/resources/templates/home/index.html
+++ b/lab-9/eRegistrar/src/main/resources/templates/home/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="row justify-content-center text-center">
                     <div class="col-md-10 col-lg-6">
-                        <h1 class="display-5">The Coolest Registrar System you can think of</h1>
+                        <h1 class="display-5">Light weight student registration system for you</h1>
 
                         <p class="lead">How you choose to register your clients has impact on your productivity and
                             creativity. It also says a lot about your business. We are the right registration system for
