--- a/lab-9/eRegistrar/src/main/resources/templates/student/list.html
+++ b/lab-9/eRegistrar/src/main/resources/templates/student/list.html
@@ -17,19 +17,38 @@
 <div class="wrapper">
     <div th:replace="fragments/header :: header"></div>
     <div class="container">
-        <div class="pt-5">
-            <h3>List of students</h3>
+        <div class="row my-5">
+            <div class="col-auto mr-auto">
+                    <h3>List of students</h3>
+            </div>
+            <div class="col-auto">
+                <a href="/eregistrar/student/new" class="btn btn-primary"> Add student</a>
+            </div>
         </div>
-        <button class="btn btn-outline float-right my-3"> Add student</button>
-        <hr/>
+
+        <!-- Search panel -->
+        <form id="searchStudentForm" method="get" action="/eregistrar/student/search">
+            <div style="margin-top:1em;" class="row">
+                <div class="col-md-12">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="searchString" name="searchString" placeholder="Enter a string to search for students" th:value="${searchString}" autofocus />
+                        <div class="input-group-append">
+                            <button id="btnSubmit" type="submit" class="btn btn-outline-success">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
         <table class="table">
-            <thead class="thead-dark">
+            <thead>
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Id</th>
+                <th scope="col">Student Number</th>
                 <th scope="col">Name</th>
                 <th scope="col">CGPA</th>
                 <th scope="col">Enrollment Date</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
@@ -38,13 +57,40 @@
                 <td th:text="${student.getStudentNumber()}"></td>
                 <td th:text="${student.getFirstName()} + ' ' + ${student.getMiddleName()} + ' ' + ${student.getLastName()}"></td>
                 <td th:text="${student.getCgpa()}"></td>
-                <td th:text="${student.getDateOfEnrollment()}"></td>
+                <td th:text="${student.getEnrollmentDate()}"></td>
+                <td><a th:href="@{'/eregistrar/student/edit/{studentId}'(studentId=${student.studentId})}">Edit</a></td>
+                <td>
+                    <a th:href="@{'#'}" data-toggle="modal" data-target="#confirmDeleteStudentModal">Delete</a>
+                </td>
+                <!-- Modal -->
+                <div class="modal fade" id="confirmDeleteStudentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalCenterTitle">Confirm Delete</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you wish to delete this student data?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                <a th:href="@{'/eregistrar/student/delete/' + ${student.studentId}}" type="button" class="btn btn-primary">Yes</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </tr>
+            <tr th:if="${studentsCount < 1}">
+                <td colspan="8" th:align="center">No students found</td>
             </tr>
             </tbody>
         </table>
 
+        <div th:replace="fragments/footer :: footer"></div>
 </div>
-    <div th:replace="fragments/footer :: footer"></div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
